--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -1,1 +1,82 @@
 
+on:
+  push:
+    branches: 
+      - main
+      - beta
+
+permissions:
+  contents: write
+
+jobs:
+  get-version:
+    uses: 
+    with:
+      prerelease-branches: '^(beta)$'
+      release-branches: '^(main)$'
+          
+    steps:
+      - name: setup rust
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build with Gradle
+        run: ./gradlew test
+  
+  build:
+    name: Spring build
+    runs-on: ubuntu-latest
+    #si get-version voit un commit qui permet une release (montée de version), il fait le build, sinon fait pas le build
+    if: ${{ needs.get-version.outputs.will-release == 'true' }}
+    needs: 
+      - get-version
+    steps:
+      # - name: Print version
+      #   run : |
+      #     echo "${{ needs.get-version.outputs.version }}"
+      #     echo "${{ needs.get-version.outputs.changelogs }}"
+      #     echo "${{ needs.get-version.outputs.is-prerelease }}"
+      #     echo "${{ needs.get-version.outputs.will-release }}"
+      - name: setup java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build with Gradle
+        env:
+          VERSION: "${{ needs.get-version.outputs.version }}"
+        run: ./gradlew bootjar
+      - uses: actions/upload-artifact@v4
+        with:
+          name: spring
+          path: build/libs/
+# Job de release
+  release: 
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [ get-version, build ]
+    steps: 
+    - name: Download artifacts
+      uses: actions/download-artifact@v4.1.8
+      with:
+        name: spring
+        path: build/
+    - name: Create Github Release
+      env:
+        VERSION: "${{ needs.get-version.outputs.version }}"
+        #github nous donne le repository dans lequel on est, = nomD'Utilisateur/NomDuRepo
+        REPO: "${{ github.repository }}"
+        COMMIT: "${{ github.sha }}"
+        GH_TOKEN: "${{ github.token }}"
+      run: |
+        gh release create --repo $REPO --target $COMMIT $VERSION build/*
+        
