--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -10,40 +10,22 @@ permissions:
 
 jobs:
   get-version:
-    uses: 
+    uses: shiipou/github-actions/.github/workflows/get-version.yml@main
     with:
       prerelease-branches: '^(beta)$'
       release-branches: '^(main)$'
-          
-    steps:
-      - name: setup rust
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: 17
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Build with Gradle
-        run: ./gradlew test
   
   build:
-    name: Spring build
+    name: Rust build
     runs-on: ubuntu-latest
     #si get-version voit un commit qui permet une release (montée de version), il fait le build, sinon fait pas le build
     if: ${{ needs.get-version.outputs.will-release == 'true' }}
     needs: 
       - get-version
     steps:
-      # - name: Print version
-      #   run : |
-      #     echo "${{ needs.get-version.outputs.version }}"
-      #     echo "${{ needs.get-version.outputs.changelogs }}"
-      #     echo "${{ needs.get-version.outputs.is-prerelease }}"
-      #     echo "${{ needs.get-version.outputs.will-release }}"
-      - name: setup java
-        uses: actions/setup-java@v4
+      - name: setup rust
+        uses: actions/checkout@v2
+        uses: 
         with:
           distribution: 'temurin'
           java-version: 17
@@ -59,6 +41,8 @@ jobs:
         with:
           name: spring
           path: build/libs/
+
+          
 # Job de release
   release: 
     name: Release
@@ -69,7 +53,7 @@ jobs:
       uses: actions/download-artifact@v4.1.8
       with:
         name: spring
-        path: build/
+        path: dist/
     - name: Create Github Release
       env:
         VERSION: "${{ needs.get-version.outputs.version }}"
@@ -78,5 +62,5 @@ jobs:
         COMMIT: "${{ github.sha }}"
         GH_TOKEN: "${{ github.token }}"
       run: |
-        gh release create --repo $REPO --target $COMMIT $VERSION build/*
+        gh release create --repo $REPO --target $COMMIT $VERSION dist/*
         
