--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
   get-version:
     uses: shiipou/github-actions/.github/workflows/get-version.yml@main
     with:
-     
+      prerelease-branches: '^(beta)$'
       release-branches: '^(main)$'
       
   build:
