--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,9 @@ jobs:
       - get-version
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-        uses: actions/checkout@v2
+        uses: 
+          actions/checkout@v4
+          actions/checkout@v2
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
