--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,5 +64,5 @@ jobs:
         COMMIT: "${{ github.sha }}"
         GH_TOKEN: "${{ github.token }}"
       run: |
-        gh release create --repo $REPO --target $COMMIT $VERSION dist/*
+        gh release create --repo $REPO --target $COMMIT $VERSION artifact.zip
         
