--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         if [ needs.get-version.outputs.is-prerelease ]
         then
-        gh prerelease create --repo $REPO --target $COMMIT $VERSION artifact.zip
+        gh prerelease create --repo $REPO --target $COMMIT $VERSION artifacts.zip
         else
-        gh release create --repo $REPO --target $COMMIT $VERSION artifact.zip
+        gh release create --repo $REPO --target $COMMIT $VERSION artifacts.zip
         fi
