fix!: correction if

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,9 +64,9 @@ jobs:
         COMMIT: "${{ github.sha }}"
         GH_TOKEN: "${{ github.token }}"
       run: |
-        if [ needs.get-version.outputs.is-prerelease ]
-        then
+        if [ "${{ needs.get-version.outputs.is-prerelease }}" = "true" ]; then
         gh prerelease create --repo $REPO --target $COMMIT $VERSION artifacts.zip
         else
         gh release create --repo $REPO --target $COMMIT $VERSION artifacts.zip
         fi
+
