fix: re-test beta

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
+name: Build & Release
 
 on:
   push:
     branches: 
       - main
       - beta 
- 
+
 permissions:
   contents: write
 
@@ -53,6 +54,8 @@ jobs:
       with:
         name: rust
         path: dist/
+    - name: Zip files artifacts
+      run: zip -r artifacts.zip dist/*
     - name: Create Github Release
       env:
         VERSION: "${{ needs.get-version.outputs.version }}"
@@ -61,5 +64,8 @@ jobs:
         COMMIT: "${{ github.sha }}"
         GH_TOKEN: "${{ github.token }}"
       run: |
-        gh release create --repo $REPO --target $COMMIT $VERSION dist/*
-        
+        if [ "${{ needs.get-version.outputs.is-prerelease }}" = "true" ]; then
+        gh prerelease create --repo $REPO --target $COMMIT $VERSION artifacts.zip
+        else
+        gh release create --repo $REPO --target $COMMIT $VERSION artifacts.zip
+        fi
