--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,10 +63,13 @@ jobs:
         REPO: "${{ github.repository }}"
         COMMIT: "${{ github.sha }}"
         GH_TOKEN: "${{ github.token }}"
+        PRERELEASE: ${{ needs.get-version.outputs.is-prerelease }}
+        CHANGELOG: ${{ needs.get-version.outputs.changelogs }}
       run: |
-        if [ "${{ needs.get-version.outputs.is-prerelease }}" = "true" ]; then
-        gh prerelease create --repo $REPO --target $COMMIT $VERSION artifacts.zip
+        echo "$CHANGELOG" > changelog.md
+        if [ "$PRERELEASE" == "true" ]; then
+        gh release create --prerelease --repo $REPO --target $COMMIT -F changelog.md "v$VERSION" artifacts.zip
         else
-        gh release create --repo $REPO --target $COMMIT $VERSION artifacts.zip
+        gh release create --repo $REPO --target $COMMIT -F changelog.md "v$VERSION" artifacts.zip
         fi
 
